estrutura inicial basica

--- a/index.html
+++ b/index.html
@@ -2,6 +2,38 @@
 layout: default
 title: "Ministério Família"
 description: "Projeto do coração de Deus"
+permalink: /
 ---
 
-{% include banner.html image="/assets/img/familia-oracao.jpg" title=page.title description=page.description %}
+{% include banner.html image="/assets/img/familia-oracao.jpg" 
+    title=page.title 
+    description=page.description 
+%}
+
+
+
+<div class="section">
+    <div class="container is-small">
+        <div class="text-center">
+            {% include svg/heart.svg width="50" fill="var(--color-red)" %}
+        </div>
+        <h2>Contribua com a obra do Senhor</h2>
+        <div class='block'>
+            <div class="text-justify">
+                <q>Cada um contribua segundo propôs no seu coração; não com tristeza, ou por necessidade; porque Deus ama ao que dá com alegria.</q>
+            </div>
+            <div class="text-right">
+                <small><i>&mdash; 2 Coríntios 9:7</i></small>
+            </div>
+        </div>
+        <div class="block text-justify">
+            Confira como você pode ajudar o ministério através de dízimos, ofertas e doações.
+        </div>
+        <div class="block text-center">
+            <a class="button" href="/doacoes">
+                Saiba como contribuir
+            </a>
+        </div>
+        
+    </div>
+</div>
