--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ permalink: /
 
 <div class="section">
     <div class="container is-small">
-        <div class="text-center">
+        <!-- <div class="text-center">
             {% include svg/heart.svg width="50" fill="var(--color-red)" %}
-        </div>
+        </div> -->
         <h2>Contribua com a obra do Senhor</h2>
         <div class='block'>
             <div class="text-justify">
