adicionando informações gerais

--- a/index.html
+++ b/index.html
@@ -11,12 +11,36 @@ permalink: /
 %}
 
 
+<section class="section">
+    <div class="container">
+        <h2 class='text-center'>Reuniões</h2>
+        <p></p>
+        <div class="row">
+            <div class="col-4 col-md-12">
+                <div class="card">
+                    <h4>Culto das Maravilhas de Deus</h4>
+                    <p>Quarta-Feira - 08:15 e às 19:00 horas</p>
+                </div>
+            </div>
+            <div class="col-4 col-md-12">
+                <div class="card">
+                    <h4>Culto do Favor de Deus</h4>
+                    <p>Sexta-Feira - 08:15 e às 19:00 horas</p>
+                </div>
+            </div>
+            <div class="col-4 col-md-12">
+                <div class="card">
+                    <h4>Culto da Família</h4>
+                    <p>Domingo - 09:00, 15:00 e às 19:00 horas</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
-<div class="section">
+
+<div class="section bg-white">
     <div class="container is-small">
-        <!-- <div class="text-center">
-            {% include svg/heart.svg width="50" fill="var(--color-red)" %}
-        </div> -->
         <h2>Contribua com a obra do Senhor</h2>
         <div class='block'>
             <div class="text-justify">
@@ -34,6 +58,5 @@ permalink: /
                 Saiba como contribuir
             </a>
         </div>
-        
     </div>
 </div>
