--- a/onde-estamos.html
+++ b/onde-estamos.html
@@ -7,14 +7,49 @@ permalink: /onde-estamos
 
 {% capture endereco_principal %}{{ site.enderecos[0].logradouro }} - {{ site.enderecos[0].numero }} - {{ site.enderecos[0].cidade }}{% endcapture %}
 
-<section class="section">
+<section class="section bg-white">
     <div class="container">
         <h1 class="mb-5">Onde estamos</h1>
-        <iframe
-        width="100%"
-        height="450"
-        frameborder="0" style="border:0"
-        src="https://www.google.com/maps/embed/v1/place?key={{ site.google_api_key }}&q={{ endereco_principal | urlencode }}&zoom=18" allowfullscreen>
-        </iframe>
+        
+        <div class="row">
+            <div class="col-6">
+                <iframe
+                width="100%"
+                height="450"
+                frameborder="0" style="border:0"
+                src="https://www.google.com/maps/embed/v1/place?key={{ site.google_api_key }}&q={{ endereco_principal | urlencode }}&zoom=16" allowfullscreen>
+                </iframe>
+            </div>
+            <div class="col-6">
+                <div class="block">
+                    <h2>Endereços</h2>
+                    {% for endereco in site.enderecos %}
+                    <li>
+                        {{ endereco.logradouro }}, {{ endereco.numero }} - {{ endereco.bairro }} - {{ endereco.cidade }}/{{ endereco.uf }}
+                    </li>
+                    {% endfor %}
+                </div>
+                <div class="block">
+                    <h2>Cultos</h2>
+                    
+                    <div class='block'>
+                        <h4>Culto das Maravilhas de Deus</h4>
+                        <div>Quarta-Feira - 08:15 e às 19:00 horas</div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Culto do Favor de Deus</h4>
+                            <p>Sexta-Feira - 08:15 e às 19:00 horas</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h4>Culto da Família</h4>
+                            <p>Domingo - 09:00, 15:00 e às 19:00 horas</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
