melhorando os itens

--- a/index.html
+++ b/index.html
@@ -14,27 +14,7 @@ permalink: /
 <section class="section">
     <div class="container">
         <h2 class='text-center'>Reuniões</h2>
-        <p></p>
-        <div class="row">
-            <div class="col-4 col-md-12">
-                <div class="card">
-                    <h4>Culto das Maravilhas de Deus</h4>
-                    <p>Quarta-Feira - 08:15 e às 19:00 horas</p>
-                </div>
-            </div>
-            <div class="col-4 col-md-12">
-                <div class="card">
-                    <h4>Culto do Favor de Deus</h4>
-                    <p>Sexta-Feira - 08:15 e às 19:00 horas</p>
-                </div>
-            </div>
-            <div class="col-4 col-md-12">
-                <div class="card">
-                    <h4>Culto da Família</h4>
-                    <p>Domingo - 09:00, 15:00 e às 19:00 horas</p>
-                </div>
-            </div>
-        </div>
+        <div class="block">{% include cultos.html %}</div>
     </div>
 </section>
 
