--- a/onde-estamos.html
+++ b/onde-estamos.html
@@ -9,10 +9,10 @@ permalink: /onde-estamos
 
 <section class="section bg-white">
     <div class="container">
-        <h1 class="mb-5">Onde estamos</h1>
+        <h1 class="mb-5">Onde fica o {{ site.title }}?</h1>
         
         <div class="row">
-            <div class="col-6">
+            <div class="col-6 col-sm-12">
                 <iframe
                 width="100%"
                 height="450"
@@ -20,36 +20,17 @@ permalink: /onde-estamos
                 src="https://www.google.com/maps/embed/v1/place?key={{ site.google_api_key }}&q={{ endereco_principal | urlencode }}&zoom=16" allowfullscreen>
                 </iframe>
             </div>
-            <div class="col-6">
-                <div class="block">
+            <div class="col-sm-12 col-6">
+                <div class="p-2">
                     <h2>Endereços</h2>
                     {% for endereco in site.enderecos %}
-                    <li>
-                        {{ endereco.logradouro }}, {{ endereco.numero }} - {{ endereco.bairro }} - {{ endereco.cidade }}/{{ endereco.uf }}
-                    </li>
+                        <div>{{ endereco.logradouro }}, {{ endereco.numero }} - {{ endereco.bairro }}<br>{{ endereco.cidade }}/{{ endereco.uf }}</div>
                     {% endfor %}
-                </div>
-                <div class="block">
-                    <h2>Cultos</h2>
-                    
-                    <div class='block'>
-                        <h4>Culto das Maravilhas de Deus</h4>
-                        <div>Quarta-Feira - 08:15 e às 19:00 horas</div>
-                    </div>
-                    <div>
-                        <div>
-                            <h4>Culto do Favor de Deus</h4>
-                            <p>Sexta-Feira - 08:15 e às 19:00 horas</p>
-                        </div>
-                    </div>
-                    <div>
-                        <div>
-                            <h4>Culto da Família</h4>
-                            <p>Domingo - 09:00, 15:00 e às 19:00 horas</p>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
+        <hr class="hr">
+        <h3>Reuniões</h3>
+        <div class="block">{% include cultos.html %}</div>
     </div>
 </div>
