colocando imagens nos cultos

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 ---
 layout: default
-title: "Ministério Família"
 description: "Projeto do coração de Deus"
 permalink: /
 ---
 
 {% include banner.html image="/assets/img/familia-oracao.jpg" 
-    title=page.title 
-    description=page.description 
+    title=site.title 
+    description=site.description 
 %}
 
 
