melhorando espaçamento nos textos

--- a/index.html
+++ b/index.html
@@ -10,24 +10,22 @@ permalink: /
 %}
 
 
-<section class="section">
+<section class="section bg-white">
     <div class="container">
-        <h2 class='text-center'>Reuniões</h2>
-        <div class="block">{% include cultos.html %}</div>
+        <h2 class='text-center mb-5'>Reuniões</h2>
+        <div>{% include cultos.html %}</div>
     </div>
 </section>
 
 
-<div class="section bg-white">
+<div class="section">
     <div class="container is-small">
-        <h2>Contribua com a obra do Senhor</h2>
-        <div class='block'>
-            <div class="text-justify">
-                <q>Cada um contribua segundo propôs no seu coração; não com tristeza, ou por necessidade; porque Deus ama ao que dá com alegria.</q>
-            </div>
-            <div class="text-right">
-                <small><i>&mdash; 2 Coríntios 9:7</i></small>
-            </div>
+        <h2 class="mb-5">Contribua com a obra do Senhor</h2>
+        <div class="text-justify">
+            <q>Cada um contribua segundo propôs no seu coração; não com tristeza, ou por necessidade; porque Deus ama ao que dá com alegria.</q>
+        </div>
+        <div class="text-right">
+            <small><i>&mdash; 2 Coríntios 9:7</i></small>
         </div>
         <div class="block text-justify">
             Confira como você pode ajudar o ministério através de dízimos, ofertas e doações.
