--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ permalink: /
             Confira como você pode ajudar o ministério através de dízimos, ofertas e doações.
         </div>
         <div class="block text-center">
-            <a class="button" href="/doacoes">
+            <a class="button has-gradient" href="/doacoes">
                 Saiba como contribuir
             </a>
         </div>
