--- a/sobre.html
+++ b/sobre.html
@@ -18,7 +18,7 @@ permalink: /sobre
         <h2 class="mb-5 text-center">A história do <span class="text-red">{{ site.title }}</span></h2>
         <div class="row is-centered-v">
             <div class="col-4 col-sm-12">
-                <div class="card  has-bg-red has-bg-hover has-bg-image" style="background-image: url('/assets/img/familia.jpg');"></div>
+                <div class="card  has-bg-red has-bg-hover has-bg-image is-default-height" style="background-image: url('/assets/img/familia.jpg');"></div>
             </div>
             <div class="col-8 col-sm-12 text-justify">
                 O ministério {{ site.title }} surgiu no ano 2020 e Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ab quod, sit possimus laborum eligendi ea quos fuga? Eius, dicta eaque? Ducimus esse eius totam! Fuga facere eveniet obcaecati ipsam vitae repudiandae voluptatem expedita saepe itaque maxime architecto illo, at nam minima libero perferendis laborum doloribus placeat adipisci corporis culpa officiis? Odit magnam dignissimos atque distinctio, quaerat repudiandae excepturi nihil soluta architecto, debitis in. Perferendis laudantium neque exercitationem ab, cum iusto at eaque dolorum repellendus nisi unde quis, ipsum deleniti numquam accusantium expedita suscipit blanditiis rerum. Hic eveniet quo nisi! Totam numquam a blanditiis reiciendis non in dolores esse exercitationem qui molestiae consectetur, assumenda cum odit? Aut doloremque dignissimos obcaecati ad quos neque ipsa illum aspernatur autem suscipit quod enim optio soluta temporibus explicabo repellat pariatur, delectus quo voluptatem consectetur velit modi placeat similique voluptate. Non explicabo quam eum, aliquid ullam mollitia at accusamus, ipsa modi libero itaque, possimus reprehenderit!
